Add less. Add test configuration.